searchbar and search result no longer have a gap between them

--- a/tradeTracker/static/styles/auctions-hollowKnightStyle.css
+++ b/tradeTracker/static/styles/auctions-hollowKnightStyle.css
@@ -81,7 +81,6 @@ h1 {
 .search-bar{
   text-align: center;
   align-items: center;
-  padding-bottom: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -99,6 +98,7 @@ h1 {
 
 .search-results {
   width: 45%;
+  margin-top: -100px;
   text-align: left;
   align-items: center;
   display: flex;
